feat: adding booking routes
